--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
+        "spatie/laravel-backup": "*",
         "spatie/laravel-image-optimizer": "^1.7"
     },
     "require-dev": {
